# dih-answers

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/agents/: fullstack-engineer.md
.github/skills/: backup-render-db.md  deploy-to-render.md  seed-render-db.md  task-documentation.md  testing.md
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  seed.sql
backend/apps/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/management/commands/: initadmin.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/core/: email_backend.py  models.py  notifications.py  tests.py  urls.py  views.py
backend/apps/qa/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/apps/qa/migrations/: 0001_initial.py  0002_answer.py  0003_answervote.py  0004_answercomment_questioncomment.py  0005_question_category_alter_question_tags_questionvote.py  0006_question_answer_is_anonymous.py
backend/apps/taxonomy/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/taxonomy/management/commands/: seed_data.py
backend/apps/taxonomy/migrations/: 0001_initial.py  0002_category.py  0003_alter_category_slug.py  0004_category_patrons.py
backend/config/: settings.py  urls.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js
frontend/e2e/: smoke.spec.js
frontend/src/: App.jsx  styles.css
scripts/: backup_render_db.py
(+45 files in other folders)
